WIP - dont summon it or spawn it as will cause crash

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -54,6 +54,7 @@
   "item.awt.spoon.desc": "I am The Doctor and this is my spoon!",
 
   "item.awt.cybermat_spawn_egg": "Cybermat Spawn Egg",
+  "item.awt.cybermat_spawn_egg.desc": "Do NOT spawn. Broken ATM, will crash.",
 
   "effect.awt.Antiradiation":"Anti-Radiation",
 
